Add target="_blank" to bottom links

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 		</div>
 	</div>
 	<footer>
-		<a href="https://ochan.ru/gds" title="Официальная доска"><img src="images/0chan-logo.svg" alt="0chan"></a>
-		<a href="https://github.com/Juribiyan" title="Мой GitHub"><img src="images/github-mark-white.svg" alt="GitHub"></a>
-		<a href="https://slonik.0chan.ru/@ubhelbr" title="Мой Mastodon"><img src="images/mastodon-logo-white.svg" alt="Mastodon"></a>
+		<a target="_blank" href="https://ochan.ru/gds" title="Официальная доска"><img src="images/0chan-logo.svg" alt="0chan"></a>
+		<a target="_blank" href="https://github.com/Juribiyan" title="Мой GitHub"><img src="images/github-mark-white.svg" alt="GitHub"></a>
+		<a target="_blank" href="https://slonik.0chan.ru/@ubhelbr" title="Мой Mastodon"><img src="images/mastodon-logo-white.svg" alt="Mastodon"></a>
 	</footer>
 </body>
 </html>
