Fix a link to hwt

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			<div class="product product-small">
 				<img src="images/boxes/housewife-tools.png" alt="HouseWife Tools" class="box">
 					<div class="product-info">
-						<h1><a href="https://github.com/Juribiyan/housewife-tools" target="_blank">HouseWife Tools</a></h1>
+						<h1><a href="housewife-tools" target="_blank">HouseWife Tools</a></h1>
 						<div class="product-details">
 							<p>Для <a href="https://314n.org" target="_blank">Пинача</a></p>
 							<p>Превращает пинач в нормальный сайт с псевдографическим интерфейсом</p>
